--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -217,10 +217,10 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
         <h1>Ei/Ψ Seminar</h1>
         <p>
             The Ei/Ψ seminar at Technische Universiteit Eindhoven is currently organized by
-            Daan Leermakers and Lorenz Panny.
+            Michele Campobasso and Mairon Mahzoun.
             The seminar is aimed at the crypto and security groups at TU/e.
             If you are interested in presenting your research, please let us know by emailing
-            l.s.panny (at) tue.nl and/or D.Leermakers.1 (at) tue.nl.
+            m.campobasso (at) tue.nl and/or m.mahzoun (at) tue.nl.
             We especially encourage presentations of work in progress or open problems
             to stimulate future joint work.
             The talks should be 30 minutes with 15 minutes for questions
@@ -233,7 +233,20 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 
         <h2>Upcoming</h2>
         <ul>
-            <li> TBD
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
+                    6 April 2021 at 13:00 (online)
+                </p><p>
+                    <b>Speaker:</b>
+                    TBA
+                </p><p>
+                    <b>Title:</b>
+                    TBA
+                </p><p>
+                    <b>Abstract:</b>
+                    TBA
+
         </li></ul>
 
         <hr style="margin-top:1ex;">
