--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0026)https://yx7.cc/orga/eipsi/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <title>Ei/Ψ Seminar @ TU/e</title>
@@ -14,7 +13,7 @@
             body { color: #4b6e91; margin: 2ex 3ex 2ex 3ex; }
             hr { height: 1px; border: none; background-color: black; }
         </style>
-        <script src="./Ei_Ψ Seminar @ TU_e_files/MathJax.js.download" id=""></script>
+        <script src="./js/MathJax.js.download" id=""></script>
         <script type="text/x-mathjax-config;executed=true">
             MathJax.Hub.Config({
                 showMathMenu: false,
@@ -27,7 +26,7 @@
                 displayIndent: "2em"
             });
         </script>
-        <link rel="icon" href="https://yx7.cc/orga/eipsi/favicon.ico">
+        <link rel="icon" href="./eipsi/favicon.ico">
 
     <style type="text/css">.backpack.dropzone {
   font-family: 'SF UI Display', 'Segoe UI';
