--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -26,7 +26,7 @@
                 displayIndent: "2em"
             });
         </script>
-        <link rel="icon" href="./eipsi/favicon.ico">
+        <link rel="icon" href="./favicon.ico">
 
     <style type="text/css">.backpack.dropzone {
   font-family: 'SF UI Display', 'Segoe UI';
