--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -13,7 +13,7 @@
             body { color: #4b6e91; margin: 2ex 3ex 2ex 3ex; }
             hr { height: 1px; border: none; background-color: black; }
         </style>
-        <script src="./js/MathJax.js.download" id=""></script>
+        <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         <script type="text/x-mathjax-config;executed=true">
             MathJax.Hub.Config({
                 showMathMenu: false,
