--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -238,13 +238,14 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     6 April 2021 at 13:00 (online)
                 </p><p>
                     <b>Speaker:</b>
-                    TBA
+                    <a href="https://www.esat.kuleuven.be/cosic/people/raluca-posteuca/">Raluca Posteuca</a> (KU Leuven)
                 </p><p>
                     <b>Title:</b>
-                    TBA
+                    How to backdoor a cipher
                 </p><p>
                     <b>Abstract:</b>
-                    TBA
+                    Newly designed block ciphers are required to show resistance against known attacks, e.g., linear and differential cryptanalysis. Two widely used methods to do this are to employ an automated search tool (e.g., MILP, SAT/SMT, etc.) and/or provide a wide-trail argument. In both cases, the core of the argument consists of bounding the transition probability of the statistical property over an isolated non-linear operation, then multiply it by the number of such operations (e.g., number of active S-boxes).
+                    In this talk we show that in the case of linear cryptanalysis such strategies can sometimes lead to a gap between the claimed security and the actual one, and that this gap can be exploited by a malicious designer. We introduce \name, a block cipher with a carefully crafted backdoor. By using the means of the wide-trail strategy, we argue the resistance of the cipher against linear and differential cryptanalysis. However, the cipher has a key-dependent iterative linear approximation over 12 rounds, holding with probability 1. This property is based on the linear hull effect although any linear trail underlying the linear hull has probability smaller than 1.
 
         </li></ul>
 
@@ -259,7 +260,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     13 October 2020 at 10:00 (online)
                 </p><p>
                     <b>Speaker:</b>
-                    Michele Campobasso (TU/e)
+                    <a href="https://michelecampobasso.github.io/">Michele Campobasso</a> (TU/e)
                 </p><p>
                     <b>Title:</b>
                     Impersonation-as-a-Service: Characterizing the Emerging Criminal Infrastructure for User Impersonation at Scale
