--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -225,7 +225,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             The talks should be 30 minutes with 15 minutes for questions
             (for open-problem presentations you're welcome to re-allocate your 45 minutes).
             <br>
-            <sub>(This page is mostly stolen from <a href="https://martindale.info/">Chloe Martindale</a>, who has been co-organising the seminar until autumn 2019.)</sub>
+            <sub><b>Credits</b>: This page was previously maintained by Lorenz Panny and Daan Leermakers, who have been organising the seminars until February 2021. The style is inspired from <a href="https://martindale.info/">Chloe Martindale</a>'s page, who has been co-organising the seminar until autumn 2019.</sub>
         </p>
 
         <hr style="margin-bottom:-1ex;">
