--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -235,6 +235,27 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    27 May 2021 at 13:00 (online)
+                </p><p>
+                    <b>Speaker:</b>
+                    <a href="https://eleftheriamakri.com/">Eleftheria Makri</a> (KU Leuven)
+                </p><p>
+                    <b>Title:</b>
+                    The return of Eratosthenes: Secure Generation of RSA Moduli using Distributed Sieving
+                </p><p>
+                    <b>Abstract:</b>
+                    Secure multiparty generation of an RSA biprime is a challenging task, which increasingly receives attention, due to the numerous privacy-preserving applications that require it. In this work, we construct a new protocol for the RSA biprime generation task, secure against a malicious adversary, who can corrupt any subset of protocol participants. Our protocol is designed for generic MPC, making it both platform-independent and allowing for weaker security models to be assumed (e.g., honest majority), should the application scenario require it. By carefully ``postponing" the check of possible inconsistencies in the shares provided by malicious adversaries, we achieve noteworthy efficiency improvements. Concretely, we are able to produce additive sharings of the prime candidates, from multiplicative sharings via a semi-honest multiplication, without degrading the overall (active) security of our protocol. This is the core of our sieving technique, increasing the probability of our protocol sampling a biprime. Similarly, we perform the first biprimality test, requiring several repetitions, without checking input share consistency, and perform the more costly consistency check only in case of success of the Jacobi symbol based biprimality test. Moreover, we propose a protocol to convert an additive sharing over a ring, into an additive sharing over the integers. Besides being a necessary sub-protocol for the RSA biprime generation, this conversion protocol is of independent interest. The cost analysis of our protocol demonstrated that our approach improves the current state-of-the-art (Chen et al. -- Crypto 2020), in terms of communication efficiency. Concretely, for the two-party case with malicious security, and primes of 2048 bits, our protocol improves communication by a factor of ~37.
+
+        </li></ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Schedule</h2>
+
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     6 April 2021 at 13:00 (online)
                 </p><p>
                     <b>Speaker:</b>
@@ -247,13 +268,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Newly designed block ciphers are required to show resistance against known attacks, e.g., linear and differential cryptanalysis. Two widely used methods to do this are to employ an automated search tool (e.g., MILP, SAT/SMT, etc.) and/or provide a wide-trail argument. In both cases, the core of the argument consists of bounding the transition probability of the statistical property over an isolated non-linear operation, then multiply it by the number of such operations (e.g., number of active S-boxes).
                     In this talk we show that in the case of linear cryptanalysis such strategies can sometimes lead to a gap between the claimed security and the actual one, and that this gap can be exploited by a malicious designer. We introduce Rood, a block cipher with a carefully crafted backdoor. By using the means of the wide-trail strategy, we argue the resistance of the cipher against linear and differential cryptanalysis. However, the cipher has a key-dependent iterative linear approximation over 12 rounds, holding with probability 1. This property is based on the linear hull effect although any linear trail underlying the linear hull has probability smaller than 1.
 
-        </li></ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Schedule</h2>
-
-        <ul class="spaced-list">
+            </li>
             <li>
                 <p>
                     <b>Time &amp; place:</b>
