--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -235,6 +235,29 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    15 September 2021 at 13:00 (online)
+                </p><p>
+                    <b>Speaker:</b>
+                    Arne Aarts (TU/e)
+                </p><p>
+                    <b>Title:</b>
+                    Leveraging Partial Model Extractions using Uncertainty Quantification
+                </p><p>
+                    <b>Abstract:</b>
+                    Companies have started to offer paid access to machine learning models as a service (MLaaS). The creation of said models requires the gathering curating and labeling of large amounts of data, which is a costly and time-consuming process. Providing black box access to the model unfortunately leaves one open to cloning attacks. With sufficiently many queries spend to the service it is possible to create a surrogate dataset and extract a clone of the underlying ML model, subverting the business model. We present a new cloning scheme that uses uncertainty quantification (UQ) to get arbitrarily close to the accuracy of the service for any amount of queries spend at the cost of needing to delegate a fraction of inputs to the service. In this two-step scheme the adversary first creates a "partial" clone using a conventional cloning attack with a small number of queries. Next, during inference the adversary uses UQ to decide whether the output of the partial clone is likely in line with that of the service. If not, it will delegate the input to the service and substitute its own output with that of the service. This way an adversary can set up their own competing service leeching from the original. Using this scheme, the overall costs made in terms of queries can be minimized given an expected number of sales such that the adversary can turn a profit. Compared to previous attacks the new scheme allows for significant lower initial costs, ensures an accuracy arbitrarily close to that of the targeted service, and can result in overall lower costs.
+                </p><p>
+                    <b>Video link:</b>
+                    TBA
+        </li></ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     27 May 2021 at 13:00 (online)
                 </p><p>
                     <b>Speaker:</b>
@@ -247,14 +270,8 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Secure multiparty generation of an RSA biprime is a challenging task, which increasingly receives attention, due to the numerous privacy-preserving applications that require it. In this work, we construct a new protocol for the RSA biprime generation task, secure against a malicious adversary, who can corrupt any subset of protocol participants. Our protocol is designed for generic MPC, making it both platform-independent and allowing for weaker security models to be assumed (e.g., honest majority), should the application scenario require it. By carefully ``postponing" the check of possible inconsistencies in the shares provided by malicious adversaries, we achieve noteworthy efficiency improvements. Concretely, we are able to produce additive sharings of the prime candidates, from multiplicative sharings via a semi-honest multiplication, without degrading the overall (active) security of our protocol. This is the core of our sieving technique, increasing the probability of our protocol sampling a biprime. Similarly, we perform the first biprimality test, requiring several repetitions, without checking input share consistency, and perform the more costly consistency check only in case of success of the Jacobi symbol based biprimality test. Moreover, we propose a protocol to convert an additive sharing over a ring, into an additive sharing over the integers. Besides being a necessary sub-protocol for the RSA biprime generation, this conversion protocol is of independent interest. The cost analysis of our protocol demonstrated that our approach improves the current state-of-the-art (Chen et al. -- Crypto 2020), in terms of communication efficiency. Concretely, for the two-party case with malicious security, and primes of 2048 bits, our protocol improves communication by a factor of ~37.
                 </p><p>
                     <b>Video link:</b>
-                    TBA
-        </li></ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-
-        <ul class="spaced-list">
+                    <a href="https://youtu.be/zleqLSiXXl4">YouTube</a>
+            </li>
             <li>
                 <p>
                     <b>Time &amp; place:</b>
