Updated EIPSI material

--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -232,6 +232,34 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 
         <h2>Upcoming</h2>
         <ul class="spaced-list">
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+
+        <ul class="spaced-list">
+
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
+                    8 February 2022 at 13:00 (online)
+                </p><p>
+                    <b>Speaker:</b>
+                    Boris Škorić (TU/e)
+                </p><p>
+                    <b>Title:</b>
+                    Can't touch this
+                </p><p>
+                    <b>Abstract:</b>
+                    Storing data on an external server with information-theoretic security, while using a key shorter than the data itself, is impossible. As an alternative, we propose a scheme that achieves information-theoretically secure evidence of accessing: The server is able to obtain information about the stored data, but not while staying undetected. Moreover, the client only needs to remember a key whose length is much shorter than the data. We provide a security proof for our scheme, based on an entropic uncertainty relation, similar to QKD proofs. Our scheme works if Alice is able to (reversibly) randomise the message to almost-uniformity with only a short key. By constructing an explicit attack we show that the desired security properties cannot be achieved without this randomisability. 
+                </p><p>
+                    <b>Link to paper:</b>
+                    <a href="https://arxiv.org/abs/2006.02476">arXiv</a>
+                </p><p>
+                    <b>Video link:</b>
+                    TBA
+            </li>
             <li>
                 <p>
                     <b>Time &amp; place:</b>
@@ -247,14 +275,8 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Companies have started to offer paid access to machine learning models as a service (MLaaS). The creation of said models requires the gathering curating and labeling of large amounts of data, which is a costly and time-consuming process. Providing black box access to the model unfortunately leaves one open to cloning attacks. With sufficiently many queries spend to the service it is possible to create a surrogate dataset and extract a clone of the underlying ML model, subverting the business model. We present a new cloning scheme that uses uncertainty quantification (UQ) to get arbitrarily close to the accuracy of the service for any amount of queries spend at the cost of needing to delegate a fraction of inputs to the service. In this two-step scheme the adversary first creates a "partial" clone using a conventional cloning attack with a small number of queries. Next, during inference the adversary uses UQ to decide whether the output of the partial clone is likely in line with that of the service. If not, it will delegate the input to the service and substitute its own output with that of the service. This way an adversary can set up their own competing service leeching from the original. Using this scheme, the overall costs made in terms of queries can be minimized given an expected number of sales such that the adversary can turn a profit. Compared to previous attacks the new scheme allows for significant lower initial costs, ensures an accuracy arbitrarily close to that of the targeted service, and can result in overall lower costs.
                 </p><p>
                     <b>Video link:</b>
-                    TBA
-        </li></ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-
-        <ul class="spaced-list">
+                    N/A
+            </li>
             <li>
                 <p>
                     <b>Time &amp; place:</b>
