--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -232,6 +232,25 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 
         <h2>Upcoming</h2>
         <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
+                    8 March 2022 at 13:00 (online)
+                </p><p>
+                    <b>Speaker:</b>
+                    Matthias Meijers (TU/e)
+                </p><p>
+                    <b>Title:</b>
+                    Formal Verification of Saber
+                </p><p>
+                    <b>Abstract:</b>
+                    This work concerns the formal verification of Saber's public-key encryption scheme in EasyCrypt.
+                    Here, "Saber" is one of the finalists in the currently ongoing competition held by NIST with the purpose of standardizing post-quantum cryptography; "EasyCrypt" is a tool specifically designed for the formal verification of cryptographic constructions.
+                    The talk will go over the relevant context and motivation for the work, the most important/interesting aspects of the formal verification process (for Saber in EasyCrypt), the obtained results, and some opportunities for potential future work.
+                </p><p>
+                    <b>Video link:</b>
+                    TBA
+            </li>
         </ul>
 
         <hr style="margin-top:1ex;">
