--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -235,6 +235,27 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    4 July 2022 at 12:00 (MF 6.131 and online)
+                </p><p>
+                    <b>Speaker:</b>
+                    Radu Lucian Rădulescu (TU/e)
+                </p><p>
+                    <b>Title:</b>
+                    What underground markets do successful cybercriminals prefer?
+                </p><p>
+                    <b>Abstract:</b>
+                    Some cybercrime marketplaces, which were formerly assumed to be unstable platforms teeming with scammers, have evolved into well-functioning markets that have shown to be a substantial global threat. But which markets are successful and what features make a good market? To answer this question we employ and validate a previously created framework and find what marketplaces cybercriminals prefer.
+            </li>
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     8 March 2022 at 13:00 (online)
                 </p><p>
                     <b>Speaker:</b>
@@ -247,18 +268,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     This work concerns the formal verification of Saber's public-key encryption scheme in EasyCrypt.
                     Here, "Saber" is one of the finalists in the currently ongoing competition held by NIST with the purpose of standardizing post-quantum cryptography; "EasyCrypt" is a tool specifically designed for the formal verification of cryptographic constructions.
                     The talk will go over the relevant context and motivation for the work, the most important/interesting aspects of the formal verification process (for Saber in EasyCrypt), the obtained results, and some opportunities for potential future work.
-                </p><p>
-                    <b>Video link:</b>
-                    TBA
             </li>
-        </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-
-        <ul class="spaced-list">
-
             <li>
                 <p>
                     <b>Time &amp; place:</b>
@@ -275,9 +285,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                 </p><p>
                     <b>Link to paper:</b>
                     <a href="https://arxiv.org/abs/2006.02476">arXiv</a>
-                </p><p>
-                    <b>Video link:</b>
-                    TBA
             </li>
             <li>
                 <p>
@@ -292,9 +299,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                 </p><p>
                     <b>Abstract:</b>
                     Companies have started to offer paid access to machine learning models as a service (MLaaS). The creation of said models requires the gathering curating and labeling of large amounts of data, which is a costly and time-consuming process. Providing black box access to the model unfortunately leaves one open to cloning attacks. With sufficiently many queries spend to the service it is possible to create a surrogate dataset and extract a clone of the underlying ML model, subverting the business model. We present a new cloning scheme that uses uncertainty quantification (UQ) to get arbitrarily close to the accuracy of the service for any amount of queries spend at the cost of needing to delegate a fraction of inputs to the service. In this two-step scheme the adversary first creates a "partial" clone using a conventional cloning attack with a small number of queries. Next, during inference the adversary uses UQ to decide whether the output of the partial clone is likely in line with that of the service. If not, it will delegate the input to the service and substitute its own output with that of the service. This way an adversary can set up their own competing service leeching from the original. Using this scheme, the overall costs made in terms of queries can be minimized given an expected number of sales such that the adversary can turn a profit. Compared to previous attacks the new scheme allows for significant lower initial costs, ensures an accuracy arbitrarily close to that of the targeted service, and can result in overall lower costs.
-                </p><p>
-                    <b>Video link:</b>
-                    N/A
             </li>
             <li>
                 <p>
