--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -235,6 +235,27 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    4 October 2022 at 12:30 (Zwarte Doos 1.03)
+                </p><p>
+                    <b>Speaker:</b>
+                    Silvia Ritsch (ETH Zurich)
+                </p><p>
+                    <b>Title:</b>
+                    Anonymous Communication: Mixnets in the Constructive Cryptography Framework
+                </p><p>
+                    <b>Abstract:</b>
+                    Anonymous Communication has been the subject of study for decades, but its importance has only increased since then. Mixnets are often proposed as a method of creating such an anonymous communication channel from an insecure one such as the internet. In this talk, we will take a look at how to model mixnets based on universal reencryption in the constructive cryptography framework introduced by U. Maurer and R. Renner in 2011 and how to prove their anonymity.
+            </li>
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     4 July 2022 at 12:00 (MF 6.131 and online)
                 </p><p>
                     <b>Speaker:</b>
@@ -247,11 +268,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Some cybercrime marketplaces, which were formerly assumed to be unstable platforms teeming with scammers, have evolved into well-functioning markets that have shown to be a substantial global threat. But which markets are successful and what features make a good market? To answer this question we employ and validate a previously created framework and find what marketplaces cybercriminals prefer.
             </li>
         </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-
         <ul class="spaced-list">
             <li>
                 <p>
