--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -235,6 +235,27 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    TBD
+                </p><p>
+                    <b>Speaker:</b>
+                    Cristoffer Leite
+                </p><p>
+                    <b>Title:</b>
+                    Actionable Cyber Threat Intelligence for Automated Incident Response
+                </p><p>
+                    <b>Abstract:</b>
+                    Applying Cyber Threat Intelligence (CTI) for active cyber defence, while potentially very beneficial, is currently limited to predominantly manual use. To solve this problem, we propose an automated approach for using CTI during incident response by gathering TTPs available on intelligence reports, mapping them to network incidents, and then using this map to create attack patterns for specific threats. This talk will cover the important steps on this research and the achieved results.
+            </li>
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+        
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     4 October 2022 at 12:30 (Zwarte Doos 1.03)
                 </p><p>
                     <b>Speaker:</b>
@@ -247,11 +268,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Anonymous Communication has been the subject of study for decades, but its importance has only increased since then. Mixnets are often proposed as a method of creating such an anonymous communication channel from an insecure one such as the internet. In this talk, we will take a look at how to model mixnets based on universal reencryption in the constructive cryptography framework introduced by U. Maurer and R. Renner in 2011 and how to prove their anonymity.
             </li>
         </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-
         <ul class="spaced-list">
             <li>
                 <p>
