--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -231,11 +231,17 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
         <hr style="margin-bottom:-1ex;">
 
         <h2>Upcoming</h2>
+        
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+
         <ul class="spaced-list">
             <li>
                 <p>
                     <b>Time &amp; place:</b>
-                    TBD
+                    22 November 2022 at 12:30 (Zwarte Doos 1.04)
                 </p><p>
                     <b>Speaker:</b>
                     Cristoffer Leite
@@ -247,10 +253,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Applying Cyber Threat Intelligence (CTI) for active cyber defence, while potentially very beneficial, is currently limited to predominantly manual use. To solve this problem, we propose an automated approach for using CTI during incident response by gathering TTPs available on intelligence reports, mapping them to network incidents, and then using this map to create attack patterns for specific threats. This talk will cover the important steps on this research and the achieved results.
             </li>
         </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
         
         <ul class="spaced-list">
             <li>
