--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -232,6 +232,22 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
 
         <h2>Upcoming</h2>
         
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
+                    11 January 2023 at 12:30 (Zwarte Doos 1.03)
+                </p><p>
+                    <b>Speaker:</b>
+                    Antoine Séré
+                </p><p>
+                    <b>Title:</b>
+                    Correction proof of Hakyber’s NTT and related developments
+                </p><p>
+                    <b>Abstract:</b>
+                    Kyber is a key-encapsulation mechanism (KEM) that has been selected to be part of NIST’s first post-quantum cryptography standard. It’s security is based on the hardness of a variant of the learning with errors (LWE) problem. Jasmin is a low level programming language designed to implement cryptographic primitives, and correction and security properties of Jasmin programs can be proven using the proof assistant EasyCrypt. A formally verified implementation of Kyber called Hakyber has been developed, written in Jasmin, and formally verified in EasyCrypt. Hakyber’s correction proof involves more complex mathematical structures than the cryptographic primitives that were previously formalized In EasyCrypt. In this talk we will discuss the correction proof of Hakyber, in particular the correction proof of the Number Theoretic Transform (NTT) that Hakyber uses. We will go over the structure of the proof, the difficulties encountered, and the modifications to EasyCrypt that we are currently developing to avoid these issues in future work, namely type classes and annotations.
+             </li>
+        </ul>
 
         <hr style="margin-top:1ex;">
 
