--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -236,6 +236,27 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    20 February 2023 at 12:30 (Zwarte Doos 1.04)
+                </p><p>
+                    <b>Speaker:</b>
+                    Jolijn Cottaar
+                </p><p>
+                    <b>Title:</b>
+                    R.I.P. SIDH
+                </p><p>
+                    <b>Abstract:</b>
+                    Supersingular Isogeny Diffie Hellman (SIDH) was one of the pillars of isogeny-based crypto since its conception in 2011. It made it till the fourth round of the NIST post-quantum competition, a search for new quantum-secure cryptographic systems. In the summer of 2022 however, a series of devastating attacks on SIDH broke the system completely. In this seminar we will talk about SIDH and then give an overview of the attacks that broke this system.
+             </li>
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+        
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     11 January 2023 at 12:30 (Zwarte Doos 1.03)
                 </p><p>
                     <b>Speaker:</b>
@@ -248,11 +269,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Kyber is a key-encapsulation mechanism (KEM) that has been selected to be part of NIST’s first post-quantum cryptography standard. It’s security is based on the hardness of a variant of the learning with errors (LWE) problem. Jasmin is a low level programming language designed to implement cryptographic primitives, and correction and security properties of Jasmin programs can be proven using the proof assistant EasyCrypt. A formally verified implementation of Kyber called Hakyber has been developed, written in Jasmin, and formally verified in EasyCrypt. Hakyber’s correction proof involves more complex mathematical structures than the cryptographic primitives that were previously formalized In EasyCrypt. In this talk we will discuss the correction proof of Hakyber, in particular the correction proof of the Number Theoretic Transform (NTT) that Hakyber uses. We will go over the structure of the proof, the difficulties encountered, and the modifications to EasyCrypt that we are currently developing to avoid these issues in future work, namely type classes and annotations.
              </li>
         </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-
         <ul class="spaced-list">
             <li>
                 <p>
