--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -239,7 +239,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     20 February 2023 at 12:30 (Zwarte Doos 1.04)
                 </p><p>
                     <b>Speaker:</b>
-                    Jolijn Cottaar
+                    Jolijn Cottaar (TU/e)
                 </p><p>
                     <b>Title:</b>
                     R.I.P. SIDH
@@ -260,7 +260,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     11 January 2023 at 12:30 (Zwarte Doos 1.03)
                 </p><p>
                     <b>Speaker:</b>
-                    Antoine Séré
+                    Antoine Séré (LIX)
                 </p><p>
                     <b>Title:</b>
                     Correction proof of Hakyber’s NTT and related developments
@@ -276,7 +276,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     22 November 2022 at 12:30 (Zwarte Doos 1.04)
                 </p><p>
                     <b>Speaker:</b>
-                    Cristoffer Leite
+                    Cristoffer Leite (TU/e)
                 </p><p>
                     <b>Title:</b>
                     Actionable Cyber Threat Intelligence for Automated Incident Response
