--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -17,6 +17,8 @@ author_profile: true
       {% if year != written_year %}
         <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
         {% capture written_year %}{{ year }}{% endcapture %}
+      {% else %}
+        <hr/>
       {% endif %}
       {% include archive-single.html %}
     {% endfor %}
