--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -12,6 +12,7 @@ author_profile: true
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
+{% capture first_article %}'None'{% endcapture %}
     {% for post in site.publications reversed %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if year != written_year %}
