--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -12,16 +12,16 @@ author_profile: true
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
-{% assign first_article = 'True' %}
+{% assign first_article = 'False' %}
     {% for post in site.publications reversed %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if year != written_year %}
         <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
         {% capture written_year %}{{ year }}{% endcapture %}
-        {% assign first_article = 'True' %}
+        {% assign first_article = 'False' %}
       {% else %}
-        {% if first_article == 'True' %}
-          {% assign first_article = 'False' %}
+        {% if first_article == 'False' %}
+          {% assign first_article = 'True' %}
         {% else %}
           <hr/>
         {% endif %}
