Update EiPSi page

--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -236,6 +236,27 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    24 May 2023 at 12:30 (location TBA)
+                </p><p>
+                    <b>Speaker:</b>
+                    Dominik Roy George (TU/e)
+                </p><p>
+                    <b>Title:</b>
+                    Privacy-Preserving Multi-Party Access Control for Third-Party UAV Services
+                </p><p>
+                    <b>Abstract:</b>
+                    Third-Party Unmanned Aerial Vehicle (UAV) Services, a.k.a. Drone-as-a-Service (DaaS), are an increasingly adopted business model, which enables possibly unskilled users, with no background knowledge, to operate drones and run automated drone-based tasks. Although these services provide significant advantages, the resources provided by drones are typically owned by multiple parties. Thus, Third-Party UAV services require adopting multi-party access control solutions. In this context, the leakage of the access control policies specified by the data owners might disclose confidential information and, thus, they should be protected as well. In this talk, we will present a solution that advances an existing privacy-preserving multi-party access control framework based on Secure Function Evaluation to fit the distributed and heterogeneous nature of drone deployments. 
+             </li>
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+        
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     20 February 2023 at 12:30 (Zwarte Doos 1.04)
                 </p><p>
                     <b>Speaker:</b>
@@ -247,13 +268,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     <b>Abstract:</b>
                     Supersingular Isogeny Diffie Hellman (SIDH) was one of the pillars of isogeny-based crypto since its conception in 2011. It made it till the fourth round of the NIST post-quantum competition, a search for new quantum-secure cryptographic systems. In the summer of 2022 however, a series of devastating attacks on SIDH broke the system completely. In this seminar we will talk about SIDH and then give an overview of the attacks that broke this system.
              </li>
-        </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-        
-        <ul class="spaced-list">
             <li>
                 <p>
                     <b>Time &amp; place:</b>
