--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -236,7 +236,44 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
-                    24 May 2023 at 12:30 (location TBA)
+                    4 July 2023 at 12:15 in MF 0.593
+                </p><p>
+                    <b>Speaker:</b>
+                    Gelareh Hasel Mehri (TU/e)
+                </p><p>
+                    <b>Title:</b>
+                    Mitigating Privilege Misuse in Access Control through Anomaly Detection
+                </p><p>
+                    <b>Abstract:</b>
+                    In this work, a framework is proposed to complement access control with anomaly detection for the run-time monitoring of access requests and raising an alert when a user diverges from their normal access behavior.
+             </li>
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
+                    21 June 2023 at 12:30 in MF 3.122
+                </p><p>
+                    <b>Speaker:</b>
+                    Marc Vorstermans (TU/e)
+                </p><p>
+                    <b>Title:</b>
+                    Secure Graph Algorithms and Oblivious Data Structures for Multiparty Computation
+                </p><p>
+                    <b>Abstract:</b>
+                    Secure multiparty computation (MPC) is a field in cryptography in which the goal is to develop protocols such that several parties, each with their own private input, can jointly run the protocol without revealing their input. Only information on the input that can be logically deduced from the output may leak. In this thesis, we study graph algorithms and data structures for MPC. A motivating application of graph algorithms is fraud detection in the banking sector. We can convert transaction networks to graphs and perform computations on them, but as we work with privacy-sensitive data it is important to perform these computations securely. By studying three graph theoretical problems, the celebrity problem, cycle detection, and shortest path problem, our goal is to develop various techniques that can be used for graph algorithms for MPC. Next to that, we also take a look at Oblivious RAM (ORAM). ORAM will be used to implement graph algorithms as well as to construct oblivious data structures for MPC. We present an oblivious stack, queue, binary search tree, and priority queue. This is of interest as data structures are closely related to the performance of algorithms.
+             </li>
+        </ul>
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
+                    24 May 2023 at 12:30 in MF 0.593
                 </p><p>
                     <b>Speaker:</b>
                     Dominik Roy George (TU/e)
@@ -248,11 +285,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     Third-Party Unmanned Aerial Vehicle (UAV) Services, a.k.a. Drone-as-a-Service (DaaS), are an increasingly adopted business model, which enables possibly unskilled users, with no background knowledge, to operate drones and run automated drone-based tasks. Although these services provide significant advantages, the resources provided by drones are typically owned by multiple parties. Thus, Third-Party UAV services require adopting multi-party access control solutions. In this context, the leakage of the access control policies specified by the data owners might disclose confidential information and, thus, they should be protected as well. In this talk, we will present a solution that advances an existing privacy-preserving multi-party access control framework based on Secure Function Evaluation to fit the distributed and heterogeneous nature of drone deployments. 
              </li>
         </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-        
         <ul class="spaced-list">
             <li>
                 <p>
