--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -236,7 +236,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
-                    4 July 2023 at 12:15 in MF 0.593
+                    4 July 2023 at 12:15 (MF 0.593)
                 </p><p>
                     <b>Speaker:</b>
                     Gelareh Hasel Mehri (TU/e)
@@ -257,7 +257,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
-                    21 June 2023 at 12:30 in MF 3.122
+                    21 June 2023 at 12:30 (MF 3.122)
                 </p><p>
                     <b>Speaker:</b>
                     Marc Vorstermans (TU/e)
@@ -273,7 +273,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
-                    24 May 2023 at 12:30 in MF 0.593
+                    24 May 2023 at 12:30 (MF 0.593)
                 </p><p>
                     <b>Speaker:</b>
                     Dominik Roy George (TU/e)
