--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -236,6 +236,27 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
             <li>
                 <p>
                     <b>Time &amp; place:</b>
+                    20 September 2023 at 12:30 (MF 11/12)
+                </p><p>
+                    <b>Speaker:</b>
+                    Denis Nabokov (Lund University)
+                </p><p>
+                    <b>Title:</b>
+                    Key Recovery Attacks on Approximate Homomorphic Encryption with Non-Worst-Case Noise Flooding Countermeasures
+                </p><p>
+                    <b>Abstract:</b>
+                    In this work, we present novel key-recovery attacks on Approximate Homomorphic Encryption schemes, such as CKKS, when employing noise-flooding countermeasures based on non-worst-case noise estimation. Our attacks build upon and enhance the seminal work by Li and Miccincio at EUROCRYPT 2021. We demonstrate that relying on average-case noise estimation undermines noise-flooding countermeasures, even if the secure noise bounds derived from differential privacy as published by Li et al. at CRYPTO 2022 are implemented. This study emphasizes the necessity of adopting worst-case noise estimation in Approximate Homomorphic Encryption when sharing decryption results. We perform the proposed attacks on openFHE, an emerging open-source FHE library garnering increased attention. We experimentally demonstrate the ability to recover the secret key using just one shared decryption output. Furthermore, we investigate the implications of our findings for other libraries, such as IBM's HElib library, which allow experimental estimation of the noise bounds. Finally, we reveal that deterministic noise generation utilizing a pseudorandom generator fails to provide supplementary protection. 
+             </li>
+        </ul>
+
+        <hr style="margin-top:1ex;">
+
+        <h2>Past seminars</h2>
+
+        <ul class="spaced-list">
+            <li>
+                <p>
+                    <b>Time &amp; place:</b>
                     4 July 2023 at 12:15 (MF 0.593)
                 </p><p>
                     <b>Speaker:</b>
@@ -248,11 +269,6 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     In this work, a framework is proposed to complement access control with anomaly detection for the run-time monitoring of access requests and raising an alert when a user diverges from their normal access behavior.
              </li>
         </ul>
-
-        <hr style="margin-top:1ex;">
-
-        <h2>Past seminars</h2>
-
         <ul class="spaced-list">
             <li>
                 <p>
