--- a/eipsi/index.html
+++ b/eipsi/index.html
@@ -239,7 +239,7 @@ img.MathJax_strut {border: 0!important; padding: 0!important; margin: 0!importan
                     13 February 2024 (MF 6.132)
                 </p><p>
                     <b>Speaker:</b>
-                    Vittoria Cozza (University of Trento)
+                    Vittoria Cozza (University of Verona)
                 </p><p>
                     <b>Title:</b>
                     Obfuscation of Programmable Logic Controllers 
