fixed typos, added podcast

--- a/_pages/ttp.html
+++ b/_pages/ttp.html
@@ -20,6 +20,15 @@ author_profile: true
 {% endfor %}
 </ul>
 
+<h1>Podcasts</h1>
+
+<ul style="padding-left:15px">
+{% include base_path %}
+{% for post in site.podcasts reversed %}
+  {% include archive_ttp.html %}
+{% endfor %}
+</ul>
+
 <h1>Press</h1>
 
 <ul style="padding-left:15px">
